<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go Home Ameto</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tweet_label">Tweet a Thing</string>
    <string name="signout_label">Sign Out</string>
    <string name="profile_dummytext">go home filler</string>
    <string name="postTweet_label">Greet Your Followers</string>
    <string name="refresh_label">Refresh</string>
    <string name="intro_string">Tell Ameto to go home!</string>
    <string name="intro2_string">or tweet things instead.</string>
    <string name="home_description">This is your timeline. Why not greet your followers?</string>
    <string name="oauth_disclaimer">This app uses Twitter\'s Oauth authentication method.</string>
    <string name="disclaimer2">If you get signed out trying to tweet, oops, it\'s because you were rate limited. Try again later!</string>

</resources>
